--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 asgiref==3.8.1
 colorama==0.4.6
-Django==5.2.2
-h11==0.16.0
+Django==4.0.2
 sqlparse==0.5.3
 tzdata==2025.2
-uvicorn==0.34.3
-whitenoise==6.9.0
+uvicorn
+whitenoise
