--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     "routes": [
       {
         "src": "/static/(.*)",
-        "dest": "/static/$1"
+        "dest": "/staticfiles/$1"
       },
       {
         "src": "/(.*)",
@@ -25,3 +25,4 @@
       }
     ]
   }
+  
