settings for css

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       {
         "src": "AgriSwiftWebApp/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11.2" }
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
         "src": "build_files.sh",
@@ -15,14 +15,13 @@
       }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/staticfiles/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "AgriSwiftWebApp/wsgi.py"
-        }
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "AgriSwiftWebApp/wsgi.py"
+      }
     ]
   }
-  
