--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,10 @@
       {
         "src": "AgriSwiftWebApp/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        "config": { 
+          "maxLambdaSize": "15mb", 
+          "runtime": "python3.9"
+        }
       },
       {
         "src": "build_files.sh",
@@ -20,9 +23,12 @@
         "dest": "/staticfiles/$1"
       },
       {
+        "src": "/staticfiles/(.*)",
+        "dest": "/staticfiles/$1"
+      },
+      {
         "src": "/(.*)",
         "dest": "AgriSwiftWebApp/wsgi.py"
       }
     ]
   }
-  
