--- a/vercel.json
+++ b/vercel.json
@@ -4,24 +4,14 @@
       {
         "src": "AgriSwiftWebApp/wsgi.py",
         "use": "@vercel/python",
-        "config": { 
-          "maxLambdaSize": "15mb", 
-          "runtime": "python3.9"
-        }
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
         "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles"
-        }
+        "use": "@vercel/static"
       }
     ],
     "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/staticfiles/$1"
-      },
       {
         "src": "/staticfiles/(.*)",
         "dest": "/staticfiles/$1"
