--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-asgiref==3.8.1
-colorama==0.4.6
+asgiref==3.10.0
 Django==4.0.2
 sqlparse==0.5.3
 tzdata==2025.2
-uvicorn
-whitenoise
-gunicorn
-pillow
+whitenoise==6.11.0
